# nsai-orchestrator-mcp

./: .env.example  .env.render  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  LAUNCH_CHECKLIST.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  VERCEL_DEPLOYMENT.md  alembic.ini  capabilities.md  check_mcp_integrity.py  config.py  context.md  docker-compose.production.yml  docker-compose.yml  main.py  main_enhanced.py  mcp_server.py  mcp_server_enhanced.py  package.json  project.md  prompt.md  pyproject.toml  render.yaml  requirements.txt  rules.md  schemas.py  test_mcp.py  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cicd.yml  elite-cicd.yml
agents/: claude_analyst.py  codex_runner.py  data_analyzer.py  enhanced_agents.py  orchestrator_agent.py  web_scraper.py
alembic/: env.py
cli/: __init__.py  mcp_cli.py
core/: __init__.py  auth.py  celery_app.py  database.py  elite_architecture.py  elite_security.py  error_handling.py  logging.py  metrics.py  models.py  monitoring.py  redis_config.py  security.py  tasks.py  workflow_versioning.py
deploy/kubernetes/: configmap.yaml  namespace.yaml  secrets.yaml
docs/: API_DOCUMENTATION.md  EXPERT_AUDIT_REPORT.md  LAUNCH_README.md
frontend/: .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals-enhanced.css  globals.css  layout-enhanced.tsx  layout.tsx  page 2.tsx  page-enhanced.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/register/: page.tsx
frontend/app/workflow/: page.tsx
frontend/components/: workflow-builder.tsx  workflow-nodes.tsx
frontend/components/ui/: button.tsx
frontend/lib/: utils.ts
k8s/production/: backend-deployment.yaml  monitoring.yaml
memory/: enhanced_memory.py  graph_driver.py  memory_cache.py
plugins/: README.md
rules/: README.md  rule-01-ai-trajectory-analysis.md  rule-02-ionic-cordova-firebase.md  rule-03-julia-programming.md  rule-04-comprehensive-flutter-mobile-development.md  rule-05-multi-technology-development-guidelines.md  rule-06-cybersecurity-comprehensive-development-guidelines.md  rule-07-comprehensive-frontend-fullstack-development-guidelines.md  rule-08-ai-generation-quality-instruction-refinement-guidelines.md  rule-09-ai-application-development-command-protocol.md  rule-10-salesforce-development.md  rule-11-fpga-systemverilog.md  rule-12-business-central.md  rule-13-modern-web-frameworks.md  rule-14-additional-guidelines.md  rule-15-advanced-specialized-development.md  rule-16-comprehensive-technology-stack.md
scripts/: demo-script.py  self-healing.py
tests/: __init__.py  elite_tests.py  test_api.py
utils/: llm_client.py  task_logger.py
